gateways/gg-mgmt-gatewayclass.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: centrally-managed
spec:
  controllerName: solo.io/gloo-gateway-mgmt-plane
