gateways/gw-1.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gw-1
  namespace: gg-config
spec:
  gatewayClassName: centrally-managed
  listeners:
    - name: http
      port: 80
      protocol: "HTTP"
