gateways/gw-2.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gw-2
  namespace: gg-config-2
spec:
  gatewayClassName: centrally-managed
  listeners:
    - name: http
      port: 80
      protocol: "HTTP"
